# axum-tic-tac-toe-server

./: .editorconfig  Cargo.toml  Makefile  README.md
self_signed_certs/: cert.pem  fullchain.crt  key.pem
src/: game.rs  main.rs
